--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,17 @@ header{
     height: 110px;
     background-color: rgba(0, 0, 0, 0.5);
     top: 0;
+    display: flex;
+    justify-content: flex-end;
 }
+.btn{
+    height: 35%;
+    padding: 8px 28px;
+    border: 1px solid white;
+    align-self: center;
+    border-radius: 18px;
+}
+
 .side-bar .logo{
     width: 70%;
     margin: 23px 25px;
