--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,34 @@ main{
 }
 .recently-played{
     width: 100%;
-    height: 150px;
+    height: 320px;
     background-color: beige;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+.top-card{
+    width: 100%;
+    height: 20%;
+    background-color: fuchsia;
+}
+.card{
+    width: calc(100%/6 - 30px);
+    height: 80%;
+    background-color: blue;
+    border: 1px solid black;
+}
+.card-img{
+    width: 100%;
+    height: 70%;
+    background-color: brown;
+    border: 1px solid black;
+}
+.card-tlt-song{
+    width: 100%;
+    height: 30%;
+    background-color: chocolate;
+    border: 1px solid black;
 }
 .creato-da-jd{
     width: calc(100%/3);
