--- a/css/style.css
+++ b/css/style.css
@@ -40,56 +40,78 @@ main{
 }
 .recently-played{
     width: 100%;
-    height: 320px;
-    background-color: beige;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
+.recently-played img{
+    width: 100%;
+}
+.card-tlt-song{
+    text-align: center;
+    padding-top: 15px;
+}
+.card-tlt-song h4{
+    color: white;
+}
+.card-tlt-song p{
+    padding-top: 5px;
+    font-weight: bold;
+    color: grey;
+    line-height: 40px;
+}
 .top-card{
     width: 100%;
     height: 20%;
-    background-color: fuchsia;
+    padding-bottom: 40px;
+}
+.top-card h2{
+    font-size: 30px;
+    color: white;
+}
+.top-card p{
+    color:grey;
+    padding-top: 10px;
+    font-weight: bold;
 }
 .card{
     width: calc(100%/6 - 30px);
     height: 80%;
-    background-color: blue;
-    border: 1px solid black;
+}
+.card , .card-50{
+    padding-bottom: 40px;
 }
 .card-img{
     width: 100%;
     height: 70%;
-    background-color: brown;
-    border: 1px solid black;
 }
 .card-tlt-song{
     width: 100%;
     height: 30%;
-    background-color: chocolate;
-    border: 1px solid black;
 }
 .creato-da-jd{
     width: 100%;
-    height: 250px;
-    background-color: blueviolet;
     display: flex;
     flex-wrap: wrap;
     gap: 0 35px;
+}
+.creato-da-jd img{
+    width: 100%;
 }
 .card-50{
     width: calc(100% / 6 - 30px);
     height: 80%;
-    background-color: blue;
-    border: 1px solid black;
 }
 .artisti-popolari{
     width: 100%;
-    height: 250px;
-    background-color: cadetblue;
     display: flex;
     flex-wrap: wrap;
     gap: 0 35px;
+    margin-bottom: 40px;
+}
+.artisti-popolari img{
+    width: 100%;
+    border-radius: 50%;
 }
 /*HEADER*/
 header{
