--- a/css/style.css
+++ b/css/style.css
@@ -74,16 +74,19 @@ main{
     padding-top: 10px;
     font-weight: bold;
 }
+.cards{
+    display: flex;
+    gap: 0 36px;
+    flex-wrap: wrap;
+}
 .card{
     width: calc(100%/6 - 30px);
-    height: 80%;
 }
 .card , .card-50{
     padding-bottom: 40px;
 }
 .card-img{
     width: 100%;
-    height: 70%;
 }
 .card-tlt-song{
     width: 100%;
