[FEAT]correzione xs

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -86,6 +86,9 @@
    .side-bar .logo{
     display: none;
    } 
+   .side-bar .logo-none{
+    display: block;
+   }
    .menu-buttons span , .menu-buttons hr{
     display: none;
    }
